--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </form>
     <!-- .grid to attach tiles to -->
-    <main id="grid" class="animate__animated animate__fadeIn animate__delay-2s"></main>
+    <main id="grid" class="animate__animated animate__fadeIn display-none"></main>
     <footer>
         <!-- Include information source -->
         <p class="fine-print">Data Sourced from <a href="https://www.wikipedia.org/">Wikipedia.org</a>, all numbers are approximations.</p>
